--- a/_i18n/zh-TW/_posts/2022-02-10-為何我是多元宇宙人.md
+++ b/_i18n/zh-TW/_posts/2022-02-10-為何我是多元宇宙人.md
@@ -1,12 +1,13 @@
 ---
 layout: post
 title: "為何我是多元宇宙人"
-excerpt: "以韌性建設與開放思維，迎來最好的時代。"
-image: "/assets/imgs/CqhRh_tVMAQ5rtQ.jpg"
+excerpt: "社會崩潰的反烏托邦主義、屈服於集中式超級 AI 的二元論，將不得不讓位於多元網路拓樸牽手的合作力量。"
+image: "/assets/imgs/1500x500.jpg"
 author: "E. Glen Weyl"
 category: blog
 tags:
   - 社會創新
+cc: site.cc-by-nc-sa
 
 ---
 
@@ -31,7 +32,7 @@ tags:
 
 我將提出使多元制度發揮作用的實際挑戰有哪些，以及為什麼我覺得這些挑戰是可以被克服的。最後，我將分享我所理解的一些重要研究領域，這些領域可塑造成為比 AI 或 Web3 更富野心、更具變革性的多元技術議程——而且更加迷人。最後，我為此獻上祝福。
 
-## 闡明定義
+#### 闡明定義
 
 我理解的多元主義，是一種社會哲學，它承認並促進多樣社會文化群體和系統間的繁榮與合作。
 
@@ -49,7 +50,7 @@ tags:
 
 在此，我想有必要提出一些例子（見「多元制度」和「多元思維」），自然是來自於我早前的發表對比。但在提出之前，我在以下概述了一些額外的資格限定（qualifications）。
 
-## 限定條件
+#### 限定條件
 
 多元主義是在多種哲學中出現的一個元素，起到某些重要的想法，我自己並不接受那些哲學，但從中學到了許多。它在一些保守的、宗教的和反動的思想中發生重要作用。它在後現代、文化相對主義和虛無主義思想中也相對重要。為了將我的思想和這些我大多拒絕的學派清楚地區隔開來，在此，必須強調我思想中的另外三個元素，為了簡潔起見，我沒有將它們附加在上述多元主義中。
 
@@ -67,7 +68,7 @@ tags:
 
 [^4]: 我的思考在許多方面，最接近於蛻變自進步派實用主義學者的觀念（例如 Georg Simmel、John Dewey、W. E. B. Du Bois、Iris Marion Young、Deva Woodly）。然而，即便如此，這些思想家們關注的具體分歧，和美國左派們關注的與歷史不正義有關的多元主義並沒有得到我過多的關注；我更多著眼於尋找共識的正式規則，從而找出那些在歷史上被邊緣化的群體和歷史上受到眷顧的群體中，哪些分歧最值得強調。
 
-## 多元制度
+#### 多元制度
 
 如上所述，模糊的「合作自由民主多元」乍聽之下就像是老調重彈。大家不都喜歡這些嗎？
 
@@ -93,33 +94,27 @@ tags:
 
 順著這個思路，接著要問的就是：為什麼要通過消除多元制度和恢復一元論，來解決這些問題？為什麼不通過更傾向多元主義、形成更多認知，來解決這個問題？雖然這讓問題看起來更加複雜，但現代社會網絡理論和由此產生的演算法，正是為了應對這種複雜性。
 
-## 多元思維
+#### 多元思維
 
 然而，在說明這一點何以發揮作用之前，有必要轉向多元主義的另一面，即認識論。如上所述，我在強調多元主義在實踐中的普遍應用性時、也同時提及了對它的「抵制」。我認為這些抵制是可以、也應該是透過多元主義的發展下所帶動的思維認知，而自然化解的。
 
 多元思維的現實，也許比多元制度的現實更為顯見，來思考一些下面的舉例：
 
-### 1. 宗教
+1. **宗教**：大多數宗教，至少在其純粹的形式上，都聲稱是對基本形而上學的獨家闡述。然而，鑑於理性文明中虔誠的宗教信念的多樣性，大多數成功的宗教都與其他信仰團體達成了多元的理解，尊重彼此的信念、尋求合作和學習——特別是在倫理和政治領域——同時各自保持對其教團社群的承諾。
 
-大多數宗教，至少在其純粹的形式上，都聲稱是對基本形而上學的獨家闡述。然而，鑑於理性文明中虔誠的宗教信念的多樣性，大多數成功的宗教都與其他信仰團體達成了多元的理解，尊重彼此的信念、尋求合作和學習——特別是在倫理和政治領域——同時各自保持對其教團社群的承諾。
+   雖然在宗教的發展史上，曾有數不盡的「混合」（syncretic）信仰試圖統一並且消除這種多樣性發生（例如，印度教、基督教、伊斯蘭教、普救一位神教（UU）、巴哈伊教），但其中最成功的是在於增加了信仰的多樣性；似乎並沒有任何穩定的和平流動，使現有的信仰進入一個普世的吸引子（attractor）。另一方面，政治意識型態和倫理觀設法以各種信仰的原生術語替自己辯護，對當代國家和國際法的發展至關重要。
 
-雖然在宗教的發展史上，曾有數不盡的「混合」（syncretic）信仰試圖統一並且消除這種多樣性發生（例如，印度教、基督教、伊斯蘭教、普救一位神教（UU）、巴哈伊教），但其中最成功的是在於增加了信仰的多樣性；似乎並沒有任何穩定的和平流動，使現有的信仰進入一個普世的吸引子（attractor）。另一方面，政治意識型態和倫理觀設法以各種信仰的原生術語替自己辯護，對當代國家和國際法的發展至關重要。
+2. **語言**：被分爲十幾個語系的 91 種語言，有 1000 多萬人使用，還有更大量的語言由更少的人使用。不論人們是否贊同薩皮爾 - 沃爾夫假說（Sapir-Whorf Hypothesis）的各種版本，根據該假說，某些思想在某些語言中是不可想像的，或者更委婉的說，顯然某些語言比其他語言更適合於表達某些思想。因此，這些語言差異在某些方向上很重要，反映了承載它們的社會條件。
 
-### 2. 語言
+   統一語言的嘗試，在很大程度上可以說是在殖民或其他形式的脅迫下進行的，而不是通過對理性超越的追求；對於目前最主要的語言（如漢語和英語）體現怎樣的「理性」，幾乎沒有任何說法支撐。同時，翻譯（通常在自動化的幫助下）每天都在變得更加方便，文本得以在不同語言之間的透過良好翻譯產生共鳴，這既是重要的里程碑，也成為使其成功的顯著關鍵。
 
-被分爲十幾個語系的 91 種語言，有 1000 多萬人使用，還有更大量的語言由更少的人使用。不論人們是否贊同薩皮爾 - 沃爾夫假說（Sapir-Whorf Hypothesis）的各種版本，根據該假說，某些思想在某些語言中是不可想像的，或者更委婉的說，顯然某些語言比其他語言更適合於表達某些思想。因此，這些語言差異在某些方向上很重要，反映了承載它們的社會條件。
+   此外，即使在某些語言的統一進程中，它們的主導語言也在繼續演變，並在次文化（sub-culturally）上分裂（例如，標準白人英語對標準黑人英語）。即使在某些新興的、書呆子氣（nerdy）的領域，例如程式語言，競爭性的架構在不斷激增，並具有互相權衡（trade-offs）的特點。
 
-統一語言的嘗試，在很大程度上可以說是在殖民或其他形式的脅迫下進行的，而不是通過對理性超越的追求；對於目前最主要的語言（如漢語和英語）體現怎樣的「理性」，幾乎沒有任何說法支撐。同時，翻譯（通常在自動化的幫助下）每天都在變得更加方便，文本得以在不同語言之間的透過良好翻譯產生共鳴，這既是重要的里程碑，也成為使其成功的顯著關鍵。
+3. **學術領域**：學術領域——至少在廣義的科學領域中，人們普遍想方設法用某種普遍的「科學方法」來追求某種絕對的真理概念。然而在實踐中，領域和其次領域（和次次領域！）通常建立在相互不一致的前提之上。
 
-此外，即使在某些語言的統一進程中，它們的主導語言也在繼續演變，並在次文化（sub-culturally）上分裂（例如，標準白人英語對標準黑人英語）。即使在某些新興的、書呆子氣（nerdy）的領域，例如程式語言，競爭性的架構在不斷激增，並具有互相權衡（trade-offs）的特點。
+   讓我特別說明一些我在學術領域工作上，與這些密切相關的案例。經濟學建立在私人物品的稀缺性、理性和方法論 / 制度個人主義之上；社會學則建立在集體物品、符號學和方法論 / 制度集體主義之上。在經濟學中，公共財政領域基本上排除了市場力量存在的可能，而產業組織領域則排除了不平等和一般均衡。
 
-### 3. 學術領域
-
-學術領域——至少在廣義的科學領域中，人們普遍想方設法用某種普遍的「科學方法」來追求某種絕對的真理概念。然而在實踐中，領域和其次領域（和次次領域！）通常建立在相互不一致的前提之上。
-
-讓我特別說明一些我在學術領域工作上，與這些密切相關的案例。經濟學建立在私人物品的稀缺性、理性和方法論 / 制度個人主義之上；社會學則建立在集體物品、符號學和方法論 / 制度集體主義之上。在經濟學中，公共財政領域基本上排除了市場力量存在的可能，而產業組織領域則排除了不平等和一般均衡。
-
-雖然這確實可做為打通領域和子領域的嘗試，但它們在任何時候都只佔總體活動的一小部分，而且資金不足；最重要的是，其結果通常不是取代相關領域，而是再誕生一個新的領域或子領域（例如，資料科學來自統計學和計算機科學，行為經濟學來自經濟學和心理學）。同時，學術界對實務界的大多數重大影響（或者至少是那些得到了歷史的大方接受的）都需要跨領域的合作和同意（例如，網際網路和個人電腦的誕生、應對流行病的最有效對應等）。
+   雖然這確實可做為打通領域和次領域的嘗試，但它們在任何時候都只佔總體活動的一小部分，而且資金不足；最重要的是，其結果通常不是取代相關領域，而是再誕生一個新的領域或子領域（例如，資料科學來自統計學和計算機科學，行為經濟學來自經濟學和心理學）。同時，學術界對實務界的大多數重大影響（或者至少是那些得到了歷史的大方接受的）都需要跨領域的合作和同意（例如，網際網路和個人電腦的誕生、應對流行病的最有效對應等）。
 
 雖然這樣的多元化，正是這些領域和其他許多領域（如體育、技術、工業）的核心和持久特徵，但對這種異質性的不滿是持續的，試圖克服它更是常見的。關於宗教，任何無神論者都將（表面上「不一致」的）宗教多樣性，視爲他們對單一「理性」（如上所述，其本身非常難以捉摸）解釋一切的能力的信仰的證明。
 
@@ -145,7 +140,7 @@ tags:
 
 也就是說，何不把知識想像為「非」單一的、終極的和普遍的真理的追尋，以生態學的精神，來想像它作為逐步演變的、穩定共存的，隨着發展而具體化、複雜化的多樣性？
 
-## 多元宇宙的原則
+#### 多元宇宙的原則
 
 行文至此，多元制度和多元認識論的相似之處，希望已經浮現各位眼前。爲了突出它們的相似性，我將提出一套適用於這兩者的原則。
 
@@ -167,7 +162,7 @@ tags:
 
 因此，這些標準，儘管與其他多元主義哲學不同，但對於回答上述對多元主義提出的存在問題是必要的。
 
-## 多元制度的多元例證
+#### 多元制度的多元例證
 
 如此一來問題出現了，多元思維是否能支持多元制度？多元思維是否太過寬廣而不一致，以至於無法支持多元制度設計？我將試著說明爲什麼可行的原因，並展示一系列關於多元制度設計觀點的趨同性作為說明。我想從上述原則中挑出一個，即 CAD（跨越多樣性的合作），並說明多元思維如何支持它。
 
@@ -175,189 +170,167 @@ tags:
 
 我將表明，關於社會結構的高度簡化和不可信的假設（即使是典型的一元論模型和結論的最有力的提倡者也會同意這只是簡化）一旦得到拓展，就將傾向於以合理趨同化的形式支持上文討論的多元制度。為此，我將重點介紹七個案例，這些案例說明並非詳盡無遺，但希望能有代表性。
 
-### 1. 統計學認識論
+1. **統計學認識論**：「群眾智慧」（wisdom of crowds）這一論點，通常被作為證明市場制度（如預測市場）和民主制度的合理性。
 
-「群眾智慧」（wisdom of crowds）這一論點，通常被作為證明市場制度（如預測市場）和民主制度的合理性。
+   這至少可以追溯到孔多塞侯爵（Marquis de Condorcet）著名的「陪審團定理」（1785 年）：該觀點認爲，如果許多人都具有獨立且對等分佈的關於真理的信號（independent and identical distribution, iid），那麼所有人的等權投票比一個子集的投票更可能獲得真理。
 
-這至少可以追溯到孔多塞侯爵（Marquis de Condorcet）著名的「陪審團定理」（1785 年）：該觀點認爲，如果許多人都具有獨立且對等分佈的關於真理的信號（independent and identical distribution, iid），那麼所有人的等權投票比一個子集的投票更可能獲得真理。
+   這一結果作為支持民主的理由的力量一直被誇大了，同樣的邏輯意味着那些擁有更精確信號的人應該被賦予更大的權重，這與標準的一人一票規則不同。
 
-這一結果作為支持民主的理由的力量一直被誇大了，同樣的邏輯意味着那些擁有更精確信號的人應該被賦予更大的權重，這與標準的一人一票規則不同。
+   然而，有個更豐富、更普遍的變種，一個不需要任何不平等主義的假設，即信號一般不會獨立分佈。在當代政治中，幾乎每個人都會接受的一件事是，存在着不同的「部落」（Tribes），這些部落的偏見與他們的觀點（與可能的錯誤）相關。
 
-然而，一個更豐富、更普遍的變種，一個不需要任何不平等主義的假設，即信號一般不會獨立分佈。在當代政治中，幾乎每個人都會接受的一件事是，存在着不同的「部落」（Tribes），這些部落的偏見與他們的觀點（與可能的錯誤）相關。
+   雖然精確的最佳估計量取決於統計依賴性的精確結構，但存在一個強大而直接的統計直覺，比起那些具有相關錯誤的信號，應該給予相對獨立的信號的積累更大的權重。
 
-雖然精確的最佳估計量取決於統計依賴性的精確結構，但存在一個強大而直接的統計直覺，比起那些具有相關錯誤的信號，應該給予相對獨立的信號的積累更大的權重。
+   此一原則在科學哲學中常被稱爲「跨界一致性」（consilience）。它表明，比起個人可信度的任何對稱 / 交換函數，由社會上不同的群體支持故而不太可能互相串謀的行動方案，應該得到更大的相對可信度。這傾向於支持跨越差異的合作原則。
 
-此一原則在科學哲學中常被稱爲「跨界一致性」（consilience）。它表明，比起個人可信度的任何對稱 / 交換函數，由社會上不同的群體支持故而不太可能互相串謀的行動方案，應該得到更大的相對可信度。這傾向於支持跨越差異的合作原則。
+   它也與中立性大體一致，因為即使對精確性沒有特別看法，似乎也能對關聯結構有合理的、廣泛的社會共識。最後，它似乎相當具備可適應性，正因為它是基於一般常態的統計性質，而不是基於被視為不可改變的特定歷史環境。
 
-它也與中立性大體一致，因為即使對精確性沒有特別看法，似乎也能對關聯結構有合理的、廣泛的社會共識。最後，它似乎相當具備可適應性，正因為它是基於一般常態的統計性質，而不是基於被視為不可改變的特定歷史環境。
+2. **統計檢定力**：Penrose（1946）分析了一個擁有許多票的實體相對於一個擁有單一票的實體的投票權。
 
-### 2. 統計檢定力
+   在個人的偏好獨立且相同分佈（iid）的情況下，一個擁有 M 票的人與 M²個各擁有一票的人改變結果的機會相同，因爲平均而言，iid 的選民傾向於互相抵消彼此的偏好。
 
-潘洛斯（1946）分析了一個擁有許多票的實體相對於一個擁有單一票的實體的投票權。
+   因此，Penrose 認爲，代表團的投票權應該等於他們所代表的人口的平方根，這一規則在構成歐盟投票基礎的《尼斯條約》中得到了大致的實施。
 
-在個人的偏好獨立且相同分佈（iid）的情況下，一個擁有 M 票的人與 M²個各擁有一票的人改變結果的機會相同，因爲平均而言，iid 的選民傾向於互相抵消彼此的偏好。
+   就像前面的例子一樣，要讓每張票都符合 iid，或者是無懈可擊聯盟的一部分，這種假設很少成立。相反，政治學告訴我們，各種社會成員關係往往與投票偏好相關，但很少完全相關。
 
-因此，潘洛斯認爲，代表團的投票權應該等於他們所代表的人口的平方根，這一規則在構成歐盟投票基礎的《尼斯條約》中得到了大致的實施。
+   在這種情況下，平衡各黨派和團體的有效投票權將比簡單的平方根規則所暗示的要複雜得多，但可能會遵循類似的性質模式。因此，與社會上非常不相關的群體的投票相比，緊密相關的群體的投票應該相對於人口規模被降低權重，這使得比起支持者的人口規模，具有社會廣泛支持的選擇的力量則會被相對放大。
 
-就像前面的例子一樣，要讓每張票都符合 iid，或者是無懈可擊聯盟的一部分，這種假設很少成立。相反，政治學告訴我們，各種社會成員關係往往與投票偏好相關，但很少完全相關。
+3. **博弈與激勵理論**：我的學術背景主要是建立在博弈論基礎上的機制設計。大多數機制設計是以個人的自利爲前提，以貨幣等價物爲單位。平方投票（Quadratic Voting，QV）是基於這種論述的大群體之間近似最優的集體決策程序。
 
-在這種情況下，平衡各黨派和團體的有效投票權將比簡單的平方根規則所暗示的要複雜得多，但可能會遵循類似的性質模式。因此，與社會上非常不相關的群體的投票相比，緊密相關的群體的投票應該相對於人口規模被降低權重，這使得比起支持者的人口規模，具有社會廣泛支持的選擇的力量則會被相對放大。
+   在該程序中，個人使用一些貨幣（通常是平均分配的話語權，voice credits）來表達對各種提議或候選人的同意或反對。然而，收到的總支持並非個人貢獻的線性總和，還增加了「互動」成分，因此，眾人的有限貢獻，比單人的巨大貢獻更有力量。
 
-### 3. 博弈與激勵理論
+   這種效應是相當顯著的：1000 個人的每人一枚代幣，等於一個人的一百萬枚代幣。這就解決了「搭便車」的問題，即個人在大型專案中的貢獻較少。
 
-我的學術背景主要是建立在博弈論基礎上的機制設計。大多數機制設計是以個人的自利爲前提，以貨幣等價物爲單位。平方投票（Quadratic Voting，QV）是基於這種論述的大群體之間近似最優的集體決策程序。
+   然而，原子化的個人自利假設通常被理解爲「狹隘」的。社會關係密切的個人往往對彼此的利益有著利他主義的關注，而這種關注可以直接解決搭便車的問題。若沒有考慮到這一點，會導致 QV「過度解決」（oversolve）的情況，使結果過於偏向關聯群體。
 
-在該程序中，個人使用一些貨幣（通常是平均分配的話語權，voice credits）來表達對各種提議或候選人的同意或反對。然而，收到的總支持並非個人貢獻的線性總和，還增加了「互動」成分，因此，眾人的有限貢獻，比單人的巨大貢獻更有力量。
+   [Buterin (2019)](https://ethresear.ch/t/pairwise-coordination-subsidies-a-new-quadratic-funding-design/5553)表明，如果縮減與具有利他主義的群體（可由他們在機制中的行動所揭示）之間的互動有關的平方項，就可以克服這個問題。這也說明了，在根據相關個體的社會親密度，通過結合線性和平方項的程序，近似最優的投票機制是可能的。
 
-這種效應是相當顯著的：1000 個人的每人一枚代幣，等於一個人的一百萬枚代幣。這就解決了「搭便車」的問題，即個人在大型專案中的貢獻較少。
+   這傾向於支持多樣性，因為社會距離較遠的個人之間的互動項將被保留，而社會距離較近的個人之間的互動項則被抵消，從而允許具有社會多樣性支持的專案，戰勝具有更多同質化支持的專案。
 
-然而，原子化的個人自利假設通常被理解爲「狹隘」的。社會關係密切的個人往往對彼此的利益有著利他主義的關注，而這種關注可以直接解決搭便車的問題。若沒有考慮到這一點，會導致 QV「過度解決」（oversolve）的情況，使結果過於偏向關聯群體。
+4. **一般均衡經濟學**：從整體上理解經濟的典型框架是「全面均衡」。一般均衡理論表明，在某些條件下，具有適當稟賦效應的資本主義經濟，會產生所有理想的結果。
 
-Buterin（2019）表明，如果縮減與具有利他主義的群體（可由他們在機制中的行動所揭示）之間的互動有關的平方項，就可以克服這個問題。這也說明了，在根據相關個體的社會親密度，通過結合線性和平方項的程序，近似最優的投票機制是可能的。
+   然而，有兩個關鍵條件：所有商品都是私人的（由一個人消費）；這些商品的生產表現出「報酬遞減」（由一組資源聯合生產的數量最多是由每個人單獨行動所能生產的之和）。
 
-這傾向於支持多樣性，因為社會距離較遠的個人之間的互動項將被保留，而社會距離較近的個人之間的互動項則被抵消，從而允許具有社會多樣性支持的專案，戰勝具有更多同質化支持的專案。
+   這些條件排除了大多數與現代社會相關的現象，如技術創新、網路效應、基礎設施、城市等。Groves 和 Ledyard（1977）表明，一個簡單的、全球性的公共產品可以被添加到這個設定中，並使用像 QV 這樣的二次方機制來保持最優性。
 
-### 4. 一般均衡經濟學
+   更為普遍的是，必須透過個人參與，來資助那些無法被邊際成本定價和自願捐款所覆蓋的基礎設施和公共產品的費用裡。由於對這些共享物品的支持，將使所有分享其價值的人受益，而且許多人都爲支持這些物品做出了貢獻，即使是自私的個人，通常也關心在共享物品的共同消費網路中，與他們關係密切相聯者的物質地位。
 
-從整體上理解經濟的典型框架是「全面均衡」。一般均衡理論表明，在某些條件下，具有適當稟賦效應的資本主義經濟，會產生所有理想的結果。
+   這產生了有效的利他主義關注，作爲「開明的自利」的一部分。這反過來又應該像上面的（3）那樣，需要有實現效率所必需的二次和線性（或在某些旋轉空間中的二次，quadratic in some rotated space）的混合機制，如 [Immorlica 等人（2019）](https://papers.ssrn.com/sol3/papers.cfm?abstract_id\=3420450)所探討的效果。出於類似的原因，這些機制應該有效地補貼跨越「社會」（共有物品中的共同參與）距離的合作。
 
-然而，有兩個關鍵條件：所有商品都是私人的（由一個人消費）；這些商品的生產表現出「報酬遞減」（由一組資源聯合生產的數量最多是由每個人單獨行動所能生產的之和）。
+5. **安全和信任**：在網路安全的典型模型中，圖中的每個鏈接都有一個權重，代表著可以通過該鏈結、而且不會導致失敗的關係（信任的價值）。關係可以通過「朋友的朋友」關係經過沒有直接連接的節點，路徑上最弱的環節決定了這種連接可以促進的最大信任，關係的總強度可以通過網路的「最大流量」計算。
 
-這些條件排除了大多數與現代社會相關的現象，如技術創新、網路效應、基礎設施、城市等。Groves 和 Ledyard（1977）表明，一個簡單的、全球性的公共產品可以被添加到這個設定中，並使用像 QV 這樣的二次方機制來保持最優性。
+   如果我們考慮到跨越兩個以上個體的合作所能帶來的價值，那麼最大流量的需要必須同時滿足。如果聯盟成員間對合作者的信任路徑是獨立的，那麼聯盟所能實現的總信任將最接近於各成員之間的信任相加。
 
-更為普遍的是，必須透過個人參與，來資助那些無法被邊際成本定價和自願捐款所覆蓋的基礎設施和公共產品的費用裡。由於對這些共享物品的支持，將使所有分享其價值的人受益，而且許多人都爲支持這些物品做出了貢獻，即使是自私的個人，通常也關心在共享物品的共同消費網路中，與他們關係密切相聯者的物質地位。
+   然而，如果這些路徑相交，那麼總的信任度將是次總和（sub-additive），因為對某個成員的信任，會使得對另一個成員的信任路徑擁擠。
 
-這產生了有效的利他主義關注，作爲「開明的自利」的一部分。這反過來又應該像上面的（3）那樣，需要有實現效率所必需的二次和線性（或在某些旋轉空間中的二次，quadratic in some rotated space）的混合機制，如 Immorlica 等人（2019）所探討的效果。出於類似的原因，這些機制應該有效地補貼跨越「社會」（共有物品中的共同參與）距離的合作。
+   比如說，如果所有的聯盟成員最終只通過單一的鏈結連接，那麼導向任何聯盟的信任都不會多於這個鏈結所能導入的信任。因此，補貼合作者路徑的社會多樣化程度，決定了一個聯盟所能擁有的信任程度。
 
-### 5. 安全和信任
+6. **抵禦攻擊的安全性**：另一個安全模型，與用於研究 / 證明區塊鏈的模型密切相關，考慮了驗證節點可能被破壞 / 攻擊的情況，並根據攻擊成功所需的節點比例對系統進行分類。
 
-在網路安全的典型模型中，圖中的每個鏈接都有一個權重，代表著可以通過該鏈結、而且不會導致失敗的關係（信任的價值）。關係可以通過「朋友的朋友」關係經過沒有直接連接的節點，路徑上最弱的環節決定了這種連接可以促進的最大信任，關係的總強度可以通過網路的「最大流量」計算。
+   這些統計數據，其隱含地假設驗證節點被破壞的概率，是獨立於驗證節點的；考慮到病毒和其他攻擊載體的工作模式，這種假設似乎是非常罕見的。
 
-如果我們考慮到跨越兩個以上個體的合作所能帶來的價值，那麼最大流量的需要必須同時滿足。如果聯盟成員間對合作者的信任路徑是獨立的，那麼聯盟所能實現的總信任將最接近於各成員之間的信任相加。
+   反向思考下，如果某個模型，其中驗證者之間有一個網路，每條加權邊都代表感染一個節點的攻擊沿着該邊角傳播到相鄰節點的概率。在這種情況下，相連節點被破壞的可能性或許難以避免，但遠處的節點同時被破壞則非常困難。
 
-然而，如果這些路徑相交，那麼總的信任度將是次總和（sub-additive），因為對某個成員的信任，會使得對另一個成員的信任路徑擁擠。
+   因此，與那些純粹基於被破壞的節點（或計算能力）數量的保證（guarantees）相比，具有韌性的系統失敗的可能性要小得多，除非許多獨立的集群被破壞。換句話說，這種保證將使得攻擊者需要更多的獨立攻擊點。
 
-比如說，如果所有的聯盟成員最終只通過單一的鏈結連接，那麼導向任何聯盟的信任都不會多於這個鏈結所能導入的信任。因此，補貼合作者路徑的社會多樣化程度，決定了一個聯盟所能擁有的信任程度。
+   這也說明了，如果某個系統的網路結構是可見的，但不能看到哪些節點被攻擊，那麼在阻止攻擊方面，要求多樣性的共識將比計算資源或節點的閾值更有效。相似的分析，也適用於某些在社會網絡中蔓延的供應鏈規劃，以及對戰爭或疾病的預測。
 
-### 6. 抵禦攻擊的安全性
+7. **分權、制衡與癌症**：複雜系統的設計 / 分析中最常見的問題之一，是穩定性 / 穩健性。
 
-另一個安全模型，與用於研究 / 證明區塊鏈的模型密切相關，考慮了驗證節點可能被破壞 / 攻擊的情況，並根據攻擊成功所需的節點比例對系統進行分類。
+   不能成功清除癌症的生物系統會死亡，正如麥迪遜在《聯邦黨人文集》第 10 篇所寫，類似的論點也適用於避免政治派別的專政。
 
-這些統計數據，其隱含地假設驗證節點被破壞的概率，是獨立於驗證節點的；考慮到病毒和其他攻擊載體的工作模式，這種假設似乎是非常罕見的。
+   生物、政治或其他制度制衡的設計通常基於避免這種結果。例如，麥迪遜認爲，美國憲法中各個機構有不同的選舉原則，這使得所有機構不可能同時被俘獲。
 
-反向思考下，如果某個模型，其中驗證者之間有一個網路，每條加權邊都代表感染一個節點的攻擊沿着該邊角傳播到相鄰節點的概率。在這種情況下，相連節點被破壞的可能性或許難以避免，但遠處的節點同時被破壞則非常困難。
-
-因此，與那些純粹基於被破壞的節點（或計算能力）數量的保證（guarantees）相比，具有韌性的系統失敗的可能性要小得多，除非許多獨立的集群被破壞。換句話說，這種保證將使得攻擊者需要更多的獨立攻擊點。
-
-這也說明了，如果某個系統的網路結構是可見的，但不能看到哪些節點被攻擊，那麼在阻止攻擊方面，要求多樣性的共識將比計算資源或節點的閾值更有效。相似的分析，也適用於某些在社會網絡中蔓延的供應鏈規劃，以及對戰爭或疾病的預測。
-
-7. 分權、制衡與癌症：複雜系統的設計 / 分析中最常見的問題之一，是穩定性 / 穩健性。
-
-不能成功清除癌症的生物系統會死亡，正如麥迪遜在《聯邦黨人文集》第 10 篇所寫，類似的論點也適用於避免政治派別的專政。
-
-生物、政治或其他制度制衡的設計通常基於避免這種結果。例如，麥迪遜認爲，美國憲法中各個機構有不同的選舉原則，這使得所有機構不可能同時被俘獲。
-
-讓我們形式化這個邏輯思考：考慮一個網狀結構，代表兩個行動者（或物理位置）之間政治協調（或癌症擴散）的機率或強度。避免派系（或癌症）的支配將要求制衡，而這與網路距離關聯。因此，網路上接近的集群不能同時俘獲多個機構。在這樣的系統設計中，重大的變革，需要跨越多樣性的合作。
+   讓我們形式化這個邏輯思考：考慮一個網狀結構，代表兩個行動者（或物理位置）之間政治協調（或癌症擴散）的機率或強度。避免派系（或癌症）的支配將要求制衡，而這與網路距離關聯。因此，網路上接近的集群不能同時俘獲多個機構。在這樣的系統設計中，重大的變革，需要跨越多樣性的合作。
 
 雖然我主要關注的，是可用於推導制度設計的理論框架，但來自不同領域的幾個較零散但相關的實證框架，也傾向於指向同樣的大方向。它們包括：
 
-1. 科學和技術研究的大部分工作，包括 James Evans 和他許多合作者的定量分析，表明科學創新通常來自於以前不交流的科學領域的溝通。最近在《Science》雜誌上發表了一篇關於這項工作的出色評論。
+1. 科學和技術研究的大部分工作，包括 James Evans 和他許多合作者的定量分析，表明科學創新通常來自於以前不交流的科學領域的溝通。最近在[《Science》](https://www.science.org/doi/10.1126/science.aao0185)雜誌上發表了一篇關於這項工作的出色評論。
 
-2. 近年來，組織和商業研究方面的文獻大量湧現，顯示了團隊 / 組織從文化到認知等各種維度多樣發展的好處。最近一些優秀的評論是由 Scott Page 和 McKinsey 撰寫的。
+2. 近年來，組織和商業研究方面的文獻大量湧現，顯示了團隊 / 組織從文化到認知等各種維度多樣發展的好處。最近一些優秀的評論是由 [Scott Page](https://www.amazon.com/Diversity-Bonus-Knowledge-Compelling-Interests/dp/0691176884) 和 [McKinsey](https://www.mckinsey.com/featured-insights/diversity-and-inclusion/diversity-wins-how-inclusion-matters) 撰寫的。
 
-3. David Graeber 和 David Wengrow 的《萬物黎明》（The Dawn of Everything）強調在人類歷史長河中，人類文化、組織和政治的多樣性在現代性和進步產生方面的極端重要，揭示這些多樣性自身即存在意義的觀念。
+3. David Graeber 和 David Wengrow 的[《萬物黎明》（The Dawn of Everything）](https://en.wikipedia.org/wiki/The_Dawn_of_Everything) 強調在人類歷史長河中，人類文化、組織和政治的多樣性在現代性和進步產生方面的極端重要，揭示這些多樣性自身即存在意義的觀念。
 
-## 對多元制度的挑戰
+#### 對多元制度的挑戰
 
 以上的簡單描繪，證明了多元主義的自洽性，但也只是第一步。一元論者可能對多元論提出許多自然的批評。如上所述，我只能「簡單扼要」的回應；完整的、有說服力的回應不僅需要太多的篇幅，更重要的是，它需要比今天更多的研究、空間發展和支持。
 
 儘管如此，我依然認為已經有足夠的理由去相信，這些問題將能被克服。我非常認真的看待這些批評的聲浪，因為它們也是我自己對其他社會哲學提出過的批評。列舉如下：
 
-1. 多元宇宙是否不夠明確？
+1. **多元宇宙是否不夠明確**？雖然很多想法似乎支持某種形式的多元制度，但這些想法遠遠沒有匯聚到某種單一的最佳圖式協定上，事實上，整個論證過程讓人有理由對這種情況的出現感到悲觀。這給多元主義提出了一些基本問題。
 
-雖然很多想法似乎支持某種形式的多元制度，但這些想法遠遠沒有匯聚到某種單一的最佳圖式協定上，事實上，整個論證過程讓人有理由對這種情況的出現感到悲觀。這給多元主義提出了一些基本問題。
+   首先，多元論者真正支持的是什麼？他們是否有足夠共同捍衛的共識和希望？
 
-首先，多元論者真正支持的是什麼？他們是否有足夠共同捍衛的共識和希望？
+   其次，這種靈活性是否給了擁有技術知識的精英們很大的空間，來設計表面上中立的多元主義協定，而實際上是給他們狹隘的觀點和 / 或利益提供了特權？（這個問題在[我過去的作品中](https://www.radicalxchange.org/media/blog/2018-11-26-4m9b8b/)特別突出。）
 
-其次，這種靈活性是否給了擁有技術知識的精英們很大的空間，來設計表面上中立的多元主義協定，而實際上是給他們狹隘的觀點和 / 或利益提供了特權？（這個問題在我過去的作品中特別突出。）
+   我謹慎樂觀地認為，許多解決上述某一特定模型的（可證明的）最佳或近似最佳協定，在其餘幾個模型中也是穩健的、近似最佳的，或者至少遠遠優於一元論的替代方案。
 
-我謹慎樂觀地認為，許多解決上述某一特定模型的（可證明的）最佳或近似最佳協定，在其餘幾個模型中也是穩健的、近似最佳的，或者至少遠遠優於一元論的替代方案。
+   如果這個信念得到了驗證，就應該可以維持認識論上的多元主義而且不損害多元主義的成功。如果多元論者能夠同意，至少有某類多元制度是他們都喜歡的、可接受的，而且不是一元論的替代方案，那麼，現行合理的多樣性，就可以與支持（和認識論上的多元）多元制度的廣泛發展的運動並存。
 
-如果這個信念得到了驗證，就應該可以維持認識論上的多元主義而且不損害多元主義的成功。如果多元論者能夠同意，至少有某類多元制度是他們都喜歡的、可接受的，而且不是一元論的替代方案，那麼，現行合理的多樣性，就可以與支持（和認識論上的多元）多元制度的廣泛發展的運動並存。
+   而如果這類協議由相對少數、合理又穩健的協定組成，則可以遏制狹隘利益進行參數操縱的空間。
 
-而如果這類協議由相對少數、合理又穩健的協定組成，則可以遏制狹隘利益進行參數操縱的空間。
+2. **多元宇宙是否風險太大了**？如何去識別出這是否實際有用、而不僅是在理論上可行的制度，是需要透過大量的社會實驗來進行。這些制度中有許多是嶄新的、前所未聞的，需要大量的社會消化（social digestion）才能發揮其潛力。
 
-2. 多元宇宙是否風險太大了？
+   在我所指出問題意識的社會層面上，進行這種實驗，似乎有著難以想像的風險，尤其是在各種以技術爲媒介的社會實驗已經在造成破壞的時候。有沒有一個合理安全的途徑來運行多元制度？
 
-如何去識別出這是否實際有用、而不僅是在理論上可行的制度，是需要透過大量的社會實驗來進行。這些制度中有許多是嶄新的、前所未聞的，需要大量的社會消化（social digestion）才能發揮其潛力。
+   幸運的是，在過去的十年裏，我們看到了一個豐富且不斷增長的新社會技術實驗空間的出現。兩個主要的例子是「Web3」社群和以臺灣爲首的新興「數位民主國家」集群，也包括擴大的波羅的海國家、東亞和澳大拉西亞（Australasia）的重要部分。
 
-在我用來推動問題的社會層面上，進行這種實驗，似乎有著難以想像的風險，尤其是在各種以技術爲媒介的社會實驗已經在造成破壞的時候。有沒有一個合理安全的途徑來運行多元制度？
+   在這些地方，人們正在探索各種新的社會組織模式，並取得了巨大的成功，臺灣的情況和 Web3 社群的重要部分，都包含了多元化的價值取向。這表明了一系列在相對安全的情況下——但有真正的社會參與和利害關係——對這些新的社會技術進行試驗的天然實驗室。
 
-幸運的是，在過去的十年裏，我們看到了一個豐富且不斷增長的新社會技術實驗空間的出現。兩個主要的例子是「Web3」社群和以臺灣爲首的新興「數位民主國家」集群，也包括擴大的波羅的海國家、東亞和澳大拉西亞（Australasia）的重要部分。
+   此外，多元化社會組織的多層次概念，很自然的為實驗打開了空間，一系列組織（教會、公司、政府組織、工會等）的塊狀區域，也成為進行實驗、實踐多元主義的天然棲地。
 
-在這些地方，人們正在探索各種新的社會組織模式，並取得了巨大的成功，臺灣的情況和 Web3 社群的重要部分，都包含了多元化的價值取向。這表明了一系列在相對安全的情況下——但有真正的社會參與和利害關係——對這些新的社會技術進行試驗的天然實驗室。
+   城市在政治上是組織規模的典範，似乎是這種實驗進行的最恰當場所，因爲[世界上的城市數量與典型城市中人口的數量差不多](https://www.populationu.com/world-cities#:\~:text\=World%20Cities%20Population,the%20world%20as%20on%202022.)，而幾乎重要的組織都有一些相仿的層級，實驗在其中得以自然流展，多元主義可以自生且合理依循著模式解決各種問題。
 
-此外，多元化社會組織的多層次概念，很自然的為實驗打開了空間，一系列組織（教會、公司、政府組織、工會等）的塊狀區域，也成為進行實驗、實踐多元主義的天然棲地。
+   再考慮到企業，企業普遍認爲部門分化是必要的，但這也是他們面臨一些最棘手問題的根本原因；或許多元制度是個自然的解套方案。
 
-城市在政治上是組織規模的典範，似乎是這種實驗進行的最恰當場所，因爲世界上的城市數量與典型城市中人口的數量差不多，而幾乎重要的組織都有一些相仿的層級，實驗在其中得以自然流展，多元主義可以自生且合理依循著模式解決各種問題。
+3. **多元宇宙是否會過於中心化**？另一個憂慮是，上述演算法似乎依賴於對社會關係的全景視角（panoptical perspective），對整個社會網絡進行複雜的計算。這樣的全景視角是不現實的，即使可以實現，由於其侵入性，對任何實體來說也是不可取的。
 
-再考慮到企業，企業普遍認爲部門分化是必要的，但這也是他們面臨一些最棘手問題的根本原因；或許多元制度是個自然的解套方案。
+   雖然我非常同意這種擔憂背後的動機，但我懷疑它是否必然適用於我們討論的情況。當然，某些上述協定的實現，將依賴於全景視角，但在網路中的各種協定，可以用高度分散（或至少是多中心）和趨近零知識的方式[來運行](https://books.google.com/books?hl\=en&lr\=&id\=TPeVWUayM0IC&oi\=fnd&pg\=PP1&dq\=decentralized\+graph\+algorithms&ots\=IhJnP7A0nR&sig\=eK7mbVWkBfuEvHdQXgcvSavk58I#v\=onepage&q\=decentralized%20graph%20algorithms&f\=false)，這對性能的影響將是有限的。
 
-3. 多元宇宙是否會過於中心化？
+   考慮到大量的文獻和這些協定的發展來看，當我們追尋如何設計出可被支持的多元社會技術時，對集權的擔憂可以且應該成爲（柔軟靈活的）制約因素，但不應限制我們找出最有吸引力的解決方案。
 
-另一個憂慮是，上述演算法似乎依賴於對社會關係的全景視角（panoptical perspective），對整個社會網絡進行複雜的計算。這樣的全景視角是不現實的，即使可以實現，由於其侵入性，對任何實體來說也是不可取的。
+4. **多元宇宙是可操縱的嗎**？一個密切相關的憂慮是，上述多元主義機制試圖以「補貼」等方法找到橋接連結、與那些從未合作的社會群體建立難得的共識。這樣的發展過程，似乎是對強連結「徵稅」，因此可能會鼓勵人們抑制、隱匿這些社會連結。[^5]
 
-雖然我非常同意這種擔憂背後的動機，但我懷疑它是否必然適用於我們討論的情況。當然，某些上述協定的實現，將依賴於全景視角，但在網路中的各種協定，可以用高度分散（或至少是多中心）和趨近零知識的方式來運行，這對性能的影響將是有限的。
+   同時，「多元宇宙」接受並擴展了重要的激勵機制設計原則。第一個原則，在經濟學家中通常被稱爲「單調性」（Monotonicity），是指當系統的目標與行動者的目標一致時，系統應該服從於這些行動者的偏好。輔助性原則可以被看作是這一原則在群體中的延伸，多元主義承認標準經濟理論對行動者的認可。
 
-考慮到大量的文獻和這些協定的發展來看，當我們追尋如何設計出可被支持的多元社會技術時，對集權的擔憂可以且應該成爲（柔軟靈活的）制約因素，但不應限制我們找出最有吸引力的解決方案。
+   第二個原則是「抵消性激勵」（countervailing incentives）是指，如果系統為行動者創造了誇大某些變量的激勵，那麼就應該有一個抵消性激勵，來減少這個變量。
 
-4. 多元宇宙是可操縱的嗎？
+   一個典型的例子是[哈伯格稅（Harberger Tax）](http://assets.press.princeton.edu/chapters/s11222.pdf)，在這個案例中，房產的所有者通常有誇大所出售房產價格的動機，此一動機可以通過對他們承諾的售價徵稅來抵消。雖然細節可能因具體的算法而有不同，但關注它作為一個原則來約束制度設計的價值是合理的。恰好的是，運行自然且良好的多元宇宙，亦會傾向於精確的涉及這些抵消性激勵。
 
-一個密切相關的憂慮是，上述多元主義機制試圖以「補貼」等方法找到橋接連結、與那些從未合作的社會群體建立難得的共識。這樣的發展過程，似乎是對強連結「徵稅」，因此可能會鼓勵人們抑制、隱匿這些社會連結。[^5]
+   在富有野心的多元宇宙應用中，我們期望個人擁有的「金錢」（一個單一變量，代表普遍的社會價值 / 尊重）被更高維度的社會貨幣所取代，這些貨幣可作為反映個人在特定社會群體或關係中所擁有的尊重。
+
+   行動者將有動機誇大在所屬群體中的關係、受到的尊重，就像他們希望在標準的資本主義經濟中可擁有更多財富一樣。但這種動機會抵消「多元宇宙」中低報社會關係以獲得塑造社會關係的「補貼」激勵。
+
+   類似的邏輯也適用於社群的激勵，即社群會誇大某些動機如：特定議題、內部團結程度和內部機構力量等等，以利於最大化該社群對該議題的代表性與權利；這種最大化代表權的激勵，會與最大化跨越差異的合作所收到的補貼激勵，相互抵消。
+
+   雖然這一切可能有些抽象、美好，但它在日常事物的參照上給予我真正的希望，期盼它在正式系統中可以發揮作用。
+
+   例如，我們很少看到白人男子選擇試圖冒充黑人婦女，儘管「平權行動」（affirmative action）據稱將激勵這種做法。原因很簡單，白人男子的身份是其社會權力的來源，很少人願意爲了「平權行動」提供的有限利益，而放棄自身的社會權力。
+
+   在現實中，不同角度上我們會看到一些「跨越身份」的限制，因為這可能會破壞已建立的社會紐帶關係，即便對於某些非常邊緣化的社群來說這些都是社會成本。並不是指沒有社會群體試著隱藏他們的理念，特別是當他們受到嚴重迫害時，但在一個以社會資本為王的世界中（顯然是我們這個世界，在一個由多元制度管理的世界裡更是如此）人們試圖破壞他們所擁有的社會資本，似乎不太可能成為主要問題。
 
 [^5]: 這個顧慮與系統的中心化程度緊密相關。資訊的中心化及受到隱匿的趨勢，正是經濟學家們經常擔心的激勵不匹配（incentive misalignments）問題的寫照。
 
-同時，「多元宇宙」接受並擴展了重要的激勵機制設計原則。第一個原則，在經濟學家中通常被稱爲「單調性」（Monotonicity），是指當系統的目標與行動者的目標一致時，系統應該服從於這些行動者的偏好。輔助性原則可以被看作是這一原則在群體中的延伸，多元主義承認標準經濟理論對行動者的認可。
+5. **多元宇宙是否正當（legitimate）**？也許對多元宇宙最直接的挑戰是：它的設計可能過於豐富 / 複雜，無法被社會充分理解和正當化。對我而言，這似乎是一個真正的挑戰，而且不可避免地涉及到最佳化和正當性之間，某種程度的權衡。
 
-第二個原則是「抵消性激勵」（countervailing incentives）是指，如果系統為行動者創造了誇大某些變量的激勵，那麼就應該有一個抵消性激勵，來減少這個變量。
+   毫無疑問，要接納如此豐富的多元宇宙設計，不得不需要通過一系列的實驗、藝術探索、展示、教育，甚至可能通過新的理解技術，如虛擬實境模擬來進行。
 
-一個典型的例子是哈伯格稅（Harberger Tax），在這個案例中，房產的所有者通常有誇大所出售房產價格的動機，此一動機可以通過對他們承諾的售價徵稅來抵消。雖然細節可能因具體的算法而有不同，但關注它作為一個原則來約束制度設計的價值是合理的。恰好的是，運行自然且良好的多元宇宙，亦會傾向於精確的涉及這些抵消性激勵。
+   雖然我毫不懷疑這將是一個問題，也需要在某些可以實現的程度上，做出有其意義的限制，然而似乎沒有任何理由可以捨棄對於多元宇宙的探索。
 
-在富有野心的多元宇宙應用中，我們期望個人擁有的「金錢」（一個單一變量，代表普遍的社會價值 / 尊重）被更高維度的社會貨幣所取代，這些貨幣可作為反映個人在特定社會群體或關係中所擁有的尊重。
+   反之：若思考更寬廣的可能性，有很大的機會浮現出一些次佳的多元制度，它們將有很好的用戶界面，容易使人理解等等。在運算技術的歷史上，有很多這樣的先例。
 
-行動者將有動機誇大在所屬群體中的關係、受到的尊重，就像他們希望在標準的資本主義經濟中可擁有更多財富一樣。但這種動機會抵消「多元宇宙」中低報社會關係以獲得塑造社會關係的「補貼」激勵。
+   這樣的「人的因素」或許應該得到最高的關注，因為它們在個人電腦和網際網路發展的黃金時期，已經有許多研究，而不是像在 AI 社群那樣被認爲是事後之明。但與此同時，它們並沒有給我設下不可逾越的入門障礙。
 
-類似的邏輯也適用於社群的激勵，即社群會誇大某些動機如：特定議題、內部團結程度和內部機構力量等等，以利於最大化該社群對該議題的代表性與權利；這種最大化代表權的激勵，會與最大化跨越差異的合作所收到的補貼激勵，相互抵消。
+   此外，還有許多看起來同樣繁瑣和、難以正當化的協定（例如權益證明（Proof of Stake）與許多黑箱統計方法）並不怎麼多元化，但近期卻取得了巨大的成功和正當性。
 
-雖然這一切可能有些抽象、美好，但它在日常事物的參照上給予我真正的希望，期盼它在正式系統中可以發揮作用。
+   在此，我希望關於正當性的關鍵問題，將不斷地被提出，作為塑造多元主義的一把手術刀，而不是作為阻礙它們發展的一根攔路棍。
 
-例如，我們很少看到白人男子選擇試圖冒充黑人婦女，儘管「平權行動」（affirmative action）據稱將激勵這種做法。原因很簡單，白人男子的身份是其社會權力的來源，很少人願意爲了「平權行動」提供的有限利益，而放棄自身的社會權力。
+   某種意義上，我認為多元宇宙不僅僅是正當合規的，更可能是對現有基礎社會制度進行廣泛正當和改革願景的唯一合理方向。
 
-在現實中，不同角度上我們會看到一些「跨越身份」的限制，因為這可能會破壞已建立的社會紐帶關係，即便對於某些非常邊緣化的社群來說這些都是社會成本。並不是指沒有社會群體試著隱藏他們的理念，特別是當他們受到嚴重迫害時，但在一個以社會資本為王的世界中（顯然是我們這個世界，在一個由多元制度管理的世界裡更是如此）人們試圖破壞他們所擁有的社會資本，似乎不太可能成為主要問題。
+   往回看，許多界定當代政治格局的最關鍵和最具變革性的時刻，都始於多元制度，這些制度在當時肯定是相當不透明的，它們的產生是透過相互競爭的團體、相互妥協接受而誕生的（例如美國憲法）。
 
-5. 多元宇宙是否正當（legitimate）？
+   鑑於自由民主國家的大部分公眾，都接受某種形式的多元主義（尤其是在保守派和新左派中），其他部份公眾則致力於正式規則和技術，多元宇宙可能是最合理的融合基礎，也是我們實現重大基礎社會變革的最佳希望。
 
-也許對多元宇宙最直接的挑戰是：它的設計可能過於豐富 / 複雜，無法被社會充分理解和正當化。對我而言，這似乎是一個真正的挑戰，而且不可避免地涉及到最佳化和正當性之間，某種程度的權衡。
-
-毫無疑問，要接納如此豐富的多元宇宙設計，不得不需要通過一系列的實驗、藝術探索、展示、教育，甚至可能通過新的理解技術，如虛擬實境模擬來進行。
-
-雖然我毫不懷疑這將是一個問題，也需要在某些可以實現的程度上，做出有其意義的限制，然而似乎沒有任何理由可以捨棄對於多元宇宙的探索。
-
-相反：若思考更寬廣的可能性，有很大的機會浮現出一些次佳的多元制度，它們將有很好的用戶界面，容易使人理解等等。在運算技術的歷史上，有很多這樣的先例。
-
-這樣的「人的因素」或許應該得到最高的關注，因為它們在個人電腦和網際網路發展的黃金時期，已經有許多研究，而不是像在 AI 社群那樣被認爲是事後之明。但與此同時，它們並沒有給我設下不可逾越的入門障礙。
-
-此外，還有許多看起來同樣繁瑣和、難以正當化的協定（例如權益證明（Proof of Stake）與許多黑箱統計方法）並不怎麼多元化，但近期卻取得了巨大的成功和正當性。
-
-在此，我希望關於正當性的關鍵問題，將不斷地被提出，作為塑造多元主義的一把手術刀，而不是作為阻礙它們發展的一根攔路棍。
-
-某種意義上，我認為多元宇宙不僅僅是正當合規的，更可能是對現有基礎社會制度進行廣泛正當和改革願景的唯一合理方向。
-
-往回看，許多界定當代政治格局的最關鍵和最具變革性的時刻，都始於多元制度，這些制度在當時肯定是相當不透明的，它們的產生是透過相互競爭的團體、相互妥協接受而誕生的（例如美國憲法）。
-
-鑑於自由民主國家的大部分公眾，都接受某種形式的多元主義（尤其是在保守派和新左派中），其他部份公眾則致力於正式規則和技術，多元宇宙可能是最合理的融合基礎，也是我們實現重大基礎社會變革的最佳希望。
-
-## 尚待解決的問題
+#### 尚待解決的問題
 
 雖然我認為以上的理由，已經給了我們充分的希望，來相信「多元宇宙」將能克服其所面臨的挑戰，但要做到這一點，還需要許多發展的配合。上述討論提出的一些重要問題包括了：
 
@@ -377,7 +350,7 @@ Buterin（2019）表明，如果縮減與具有利他主義的群體（可由他
 
 3. 新的意義建構技術，如虛擬實境，如何維持和強化文化與制度的多元宇宙？
 
-## 邁向多元宇宙
+#### 邁向多元宇宙
 
 在這篇文章中，我幾乎是交替使用「多元主義」和「多元宇宙」這兩個詞。我現在想強調的是，為什麼我認為有必要使用一個單獨的術語：多元宇宙（Plurality）。
 
@@ -385,13 +358,13 @@ Buterin（2019）表明，如果縮減與具有利他主義的群體（可由他
 
 我認為這一點非常關鍵，因為今天其他主要的技術方向都藏有潛在的、隱晦的政治價值觀，這些價值觀往往會破壞多元主義。
 
-正如我在其他地方所論證的，AI 領域最突出的論述是對「通用」智慧的奇點的渴望，其目的是超越人類智慧的多樣性，用與人類欲望「一致」的目標優化取代多元合作的混亂，這有時被稱爲「一致的推斷意志」（coherent extrapolated volition）。
+正如[我在其他地方所論證的](https://ethics.harvard.edu/how-ai-fails-us)，AI 領域最突出的論述是對「通用」智慧的奇點的渴望，其目的是超越人類智慧的多樣性，用與人類欲望「一致」的目標優化取代多元合作的混亂，這有時被稱爲「一致的推斷意志」（coherent extrapolated volition）。
 
 即使在這些最富野心的願景之外，AI 的重點仍是最大限度地提高系統的自主性、盡可能的複製人類能力，而不是促進人與人之間的交流和合作，這與多元制度形成了對比。將通用 AI 的發展作爲技術發展的主要 / 特殊方向，也與多元思維形成差異對比。
 
 在這層意義上，AI 是深刻的中心化、一元化的未來技術願景。
 
-正如我在其他地方所論證的，圍繞 Web3 的最突出的單一敘述，著眼於將「主權個體」（sovereign individuals）從社會制度的約束中解放出來，利用「去中心化」協定，特別是分佈帳本，作為計算和交易的主要中立基底。
+正如[我在其他地方所論證的](https://www.radicalxchange.org/media/blog/sovereign-nonsense/)，圍繞 Web3 的最突出的單一敘述，著眼於將「主權個體」（sovereign individuals）從社會制度的約束中解放出來，利用「去中心化」協定，特別是分佈帳本，作為計算和交易的主要中立基底。
 
 這些帳本和具體的、正式的、相當狹窄的文化、社會性和協調的基質，可以被視為足以滿足主要基於資本主義市場的至高個體（或在某些情況下嚴格同質的群體）之間相互需要的互動。
 
@@ -430,10 +403,11 @@ Buterin（2019）表明，如果縮減與具有利他主義的群體（可由他
 
 如果這幅願景肯定無疑，那麼在我們面前的將是遠比過去數十年等待下、超乎我們想像、更加光明的未來。我們可以運用數位技術來創造、改善和發展我們的社會制度，這些貢獻遠勝過這些技術迄今爲止，對它們的侵蝕破壞。
 
-臺灣的投資，比投入 Web3 和 AI 的投資少三個數量級，卻在短短幾年內利用其在這一方向上的初步嘗試，發展了可以說是世界上技術最先進、最有活力，廣泛共享增長的民主社會，在本文撰寫之際的大流行病中，其 2200 萬人口裡只有不到 1000 人死亡。
+臺灣的投資，比投入 Web3 和 AI 的投資少三個數量級，卻在短短幾年內運用[在這一方向上的初步嘗試](https://consilienceproject.org/taiwans-digital-democracy/)，發展了可以說是世界上技術最先進、最有活力，廣泛共享增長的民主社會，在本文撰寫之際的大流行病中，其 2200 萬人口裡只有不到 1000 人死亡。
 
 隨着規模的持續擴大，這也意味着 21 世紀將成為公民民主賦能共融的黃金時代，共同合作的多樣性，將讓我們可以一同渡過與世界生存有關的危機，賦予自由更多的選擇與意義，來形塑我們的社群。
 
 在這樣的未來，社會崩潰的反烏托邦主義或屈服於集中式超級 AI 的二元論，可能會不得不讓位於多元網路拓樸牽手的合作力量。
 
 這朵相互依存、相互交織、合作的多樣複雜性之花，這座由多元文化組成的茂盛雨林，正在向我們招手。
+
