--- a/_i18n/en/_posts/2022-02-10-為何我是多元宇宙人.md
+++ b/_i18n/en/_posts/2022-02-10-為何我是多元宇宙人.md
@@ -223,15 +223,15 @@ They will need to harness virtual reality technologies **to forge stronger and d
 
 To summarize poetically, I turn to the poetic job description of Taiwan’s Digital Minister Audrey Tang:
 
-When we see “internet of things”, let’s make it an internet of beings.
-
-When we see “virtual reality”, let’s make it a shared reality.
-
-When we see “machine learning”, let’s make it collaborative learning.
-
-When we see “user experience”, let’s make it about human experience.
-
-When we hear “the singularity is near”, let us remember: the plurality is here.
+> When we see “internet of things”, let’s make it an internet of beings.
+>
+> When we see “virtual reality”, let’s make it a shared reality.
+>
+> When we see “machine learning”, let’s make it collaborative learning.
+> 
+> When we see “user experience”, let’s make it about human experience.
+> 
+> When we hear “the singularity is near”, let us remember: the plurality is here.
 
 Such an agenda is no doubt ambitious, but it is more closely aligned with both the political traditions of a large part of the world and with the origins of today’s most celebrated technologies, such as personal computing and the internet, than are the primary directions of political and technological travel today. It is also aligned between its political and technological aspects. Perhaps it is unworkable. Perhaps it is undesirable. Or perhaps it simply requires more social forces to collaborate than other directions and thus has been slower to be realized. Let me close by imagining, hoping that this last is the case and that Plurality might be feasible.
 
