--- a/_posts/2022-02-10-為何我是多元宇宙人.md
+++ b/_posts/2022-02-10-為何我是多元宇宙人.md
@@ -386,20 +386,16 @@ cc: site.cc-by-nc-sa
 
 我借用唐鳳的詩作，作為詩意的總結：
 
-> 看見「萬物聯網」，我們將智慧聯網。 \
-> When we see “internet of things”, let’s make it an internet of beings.
->
-> 看見「虛擬實境」，我們將實境共享。 \
-> When we see “virtual reality”, let’s make it a shared reality.
->
-> 看見「機器學習」，我們將協力學習。 \
-> When we see “machine learning”, let’s make it collaborative learning.
->
-> 看見「用戶體驗」，我們將體驗人際。 \
-> When we see “user experience”, let’s make it about human experience.
->
-> 聽說「奇點即將接近」——請別忘記：「數位」就在這裡。 \
-> When we hear “the singularity is near”, let us remember: the plurality is here.
+> * 看見「萬物聯網」，我們將智慧聯網。
+>   When we see “internet of things”, let’s make it an internet of beings.
+> * 看見「虛擬實境」，我們將實境共享。
+>   When we see “virtual reality”, let’s make it a shared reality.
+> * 看見「機器學習」，我們將協力學習。
+>   When we see “machine learning”, let’s make it collaborative learning.
+> * 看見「用戶體驗」，我們將體驗人際。
+>   When we see “user experience”, let’s make it about human experience.
+> * 聽說「奇點即將接近」——請別忘記：「數位」就在這裡。
+>   When we hear “the singularity is near”, let us remember: the plurality is here.
 
 這樣的議程無疑相當激勵人心。與當今政治和技術前行的主要方向相比，它與世界大部分地區的政治傳統，和當今最負聲譽的技術（如個人電腦和網際網路）的初心更加緊密的結合在一起。它在政治和技術方面也保有一致。
 
