--- a/_i18n/zh-TW/_posts/2022-02-10-為何我是多元宇宙人.md
+++ b/_i18n/zh-TW/_posts/2022-02-10-為何我是多元宇宙人.md
@@ -92,7 +92,7 @@ cc: site.cc-by-nc-sa
 
 即使是此類倡議者最推崇的歐洲議會民主制，也包含了大量的多元主義元素，如：各成員國內部的聯邦制（如英國、德國、義大利、西班牙）、各政黨之間權力分享、形成共識的隱性和顯性規則等，從比例代表和組建聯盟到荷蘭的非正式波德（Polder）制度。大多數人也至少對某種形式的輔助性原則（principles of subsidiarity）、某些群體的的權利進行明確的非個人主義保護等，產生共情。
 
-順著這個思路，接著要問的就是：為什麼要通過消除多元制度和恢復一元論，來解決這些問題？為什麼不通過更傾向多元主義、形成更多認知，來解決這個問題？雖然這讓問題看起來更加複雜，但現代社會網絡理論和由此產生的演算法，正是為了應對這種複雜性。
+順著這個思路，接著要問的就是：為什麼要通過消除多元制度和恢復一元論，來解決這些問題？**為什麼不通過更傾向多元主義、形成更多認知，來解決這個問題？**雖然這讓問題看起來更加複雜，但現代社會網絡理論和由此產生的演算法，正是為了應對這種複雜性。
 
 #### 多元思維
 
@@ -138,21 +138,21 @@ cc: site.cc-by-nc-sa
 
 因此，一種認識論再次自然地浮現出來，與制度多元主義並行。與其渴望將所有領域合併成一個單一理論，或者朝着某種普遍真理進展，為何不追求知識日益增長的具體化和差異化，積極投資於溝通這些不同領域專業，以發展具體的應用和技術？
 
-也就是說，何不把知識想像為「非」單一的、終極的和普遍的真理的追尋，以生態學的精神，來想像它作為逐步演變的、穩定共存的，隨着發展而具體化、複雜化的多樣性？
+**也就是說，何不把知識想像為「非」單一的、終極的和普遍的真理的追尋，以生態學的精神，來想像它作為逐步演變的、穩定共存的，隨着發展而具體化、複雜化的多樣性？**
 
 #### 多元宇宙的原則
 
 行文至此，多元制度和多元認識論的相似之處，希望已經浮現各位眼前。爲了突出它們的相似性，我將提出一套適用於這兩者的原則。
 
-1. 承認原則（Recognition）：認可（形式上或智識上）社會團體 / 思想流派，並給予它們超越成員 / 個人思想之和的認識論或機構制度的定位。
+1. **承認原則（Recognition）**：認可（形式上或智識上）社會團體 / 思想流派，並給予它們超越成員 / 個人思想之和的認識論或機構制度的定位。
 
-2. 輔助原則（Subsidiarity）：主要涉及某類社會群體、或其成員、或其關注的思想活動和議題，應當被委託給該群體的集體主導團或知識權威，而不是由更大型、或高層次的組織掌控或分析（analysis) 來制定規則。同時，範圍更廣的組織 / 分析在很大程度上，關注狹義的組織 / 分析之間的互動，而不是直接關注其行為 / 具體分析。
+2. **輔助原則（Subsidiarity）**：主要涉及某類社會群體、或其成員、或其關注的思想活動和議題，應當被委託給該群體的集體主導團或知識權威，而不是由更大型、或高層次的組織掌控或分析（analysis) 來制定規則。同時，範圍更廣的組織 / 分析在很大程度上，關注狹義的組織 / 分析之間的互動，而不是直接關注其行為 / 具體分析。
 
-3. 中立性原則（Neutrality)：一套可被廣義族群接受的正式規則（Formalisms) 和分析實踐，應該支配著社會群體 / 分析領域（包含個人）之間的互動，因為這樣，所以人會產生粗略的共識。也就是說，他們運作的遊戲規則，實際上並不會偏向某個群體 / 領域。
+3. **中立原則（Neutrality)**：一套可被廣義族群接受的正式規則（Formalisms) 和分析實踐，應該支配著社會群體 / 分析領域（包含個人）之間的互動，因為這樣，所以人會產生粗略的共識。也就是說，他們運作的遊戲規則，實際上並不會偏向某個群體 / 領域。
 
-4. CAD 原則（Cooperation across diversity，跨越多樣性的合作）：在一系列社會群體中（多層次）廣泛受到認可的行動和觀點，應該得到更多的信任，即使它的平均個人認可程度並沒有比較高。
+4. **CAD 原則（Cooperation across diversity，跨越多樣性的合作）**：在一系列社會群體中（多層次）廣泛受到認可的行動和觀點，應該得到更多的信任，即使它的平均個人認可程度並沒有比較高。
 
-5. 適應性原則（Adaptation）：哪些群體和領域獲得認可，應該適應群體的自然變化。作為對社會、知識交流的重要因子，鼓勵社會親和力（social affinity）與智識開啟的新模式，新群體、新領域的動態形成，應作為社會系統的目標。
+5. **適應原則（Adaptation）**：哪些群體和領域獲得認可，應該適應群體的自然變化。作為對社會、知識交流的重要因子，鼓勵社會親和力（social affinity）與智識開啟的新模式，新群體、新領域的動態形成，應作為社會系統的目標。
 
 大多數的原則是不言自明的，已出現在許多多元主義論述中。暫且不論它們有何不同，較有爭議的可能是 3、5 兩點。在某些的多元主義思想 / 應用中，中立性並非一個標準，其對一些社會群體採取容忍的態度、而非平等。
 
@@ -352,9 +352,9 @@ cc: site.cc-by-nc-sa
 
 #### 邁向多元宇宙
 
-在這篇文章中，我幾乎是交替使用「多元主義」和「多元宇宙」這兩個詞。我現在想強調的是，為什麼我認為有必要使用一個單獨的術語：多元宇宙（Plurality）。
+在這篇文章中，我幾乎是交替使用「多元主義」和「多元宇宙」這兩個詞。我現在想強調的是，為什麼我認為有必要使用一個單獨的術語：**多元宇宙（Plurality）**。
 
-我相信，我上面所概述的並不只是某種政治或社會哲學；相反，它構成了數位技術自洽的未來方向，明確地與政治哲學聯繫起來。
+我相信，我上面所概述的並不只是某種政治或社會哲學；相反，它構成了**數位技術自洽的未來方向，明確地與政治哲學聯繫起來。**
 
 我認為這一點非常關鍵，因為今天其他主要的技術方向都藏有潛在的、隱晦的政治價值觀，這些價值觀往往會破壞多元主義。
 
@@ -374,15 +374,15 @@ cc: site.cc-by-nc-sa
 
 與這兩者相比，「多元宇宙」的發展——即支持多元主義的技術——將需要與這些根本不同的架構，儘管需要利用這兩條路徑發展出的工具。
 
-它需要緊密地建立在輔助傳統之中，這種傳統是對網際網路作為「網路的網路」的想像的核心，不同的網路存在於本地化物理和組織（學術、政府等）社群之中，這些社群彼此同意互通協定（interoperable protocols），讓連結彼此的異質網路能夠互通。
+**它需要緊密地建立在輔助傳統之中，這種傳統是對網際網路作為「網路的網路」的想像的核心，不同的網路存在於本地化物理和組織（學術、政府等）社群之中，這些社群彼此同意互通協定（interoperable protocols），讓連結彼此的異質網路能夠互通。**
 
 在第一波浪潮中開發的「薄協定」（thin protocols）需要被擴展，從而在數位領域通過身份、數據共享、支付等社會系統實現的去中心化可以給更廣泛的基本權利賦權（empower）——如結社權、財產權和人格權等。
 
 這些協定可能會藉由區塊鏈來實現某些目的，但其去中心化的重點，將是本地化和輔助性，以及網路化和相互依賴，而不是純粹的冗餘化和防止攻擊。它們將需要明確地反映、代表和容納社會結構，而不僅僅是防範「共謀」或「攻擊」。
 
-它們需要運用支撐機器學習的統計技術，不只是為了鏡映和複製人類個體的智慧（例如通過類神經網路），而是作為理解和促進集體智慧的方式，允許群體達成粗略的共識，同時尊重、賦能、甚至擴散持續的差異（儘管像類神經網路這樣的工具，很可能被應用於這個過程中）。
+它們需要運用支撐機器學習的統計技術，不只是為了鏡映和複製人類個體的智慧（例如通過類神經網路），而是作為**理解和促進集體智慧的方式，允許群體達成粗略的共識，同時尊重、賦能、甚至擴散持續的差異（儘管像類神經網路這樣的工具，很可能被應用於這個過程中）。**
 
-它們將需要運用虛擬實境技術來建立更強大、更深入的人類聯繫和創造性的想像力，以增強現實世界來拓展，而不是為了逃避或建立另一個現實。
+它們將需要運用虛擬實境技術**來建立更強大、更深入的人類聯繫和創造性的想像力，以增強現實世界來拓展，而不是為了逃避或建立另一個現實。**
 
 我借用唐鳳的詩作，作為詩意的總結：
 
@@ -406,9 +406,9 @@ cc: site.cc-by-nc-sa
 
 臺灣的投資，比投入 Web3 和 AI 的投資少三個數量級，卻在短短幾年內運用[在這一方向上的初步嘗試](https://consilienceproject.org/taiwans-digital-democracy/)，發展了可以說是世界上技術最先進、最有活力，廣泛共享增長的民主社會，在本文撰寫之際的大流行病中，其 2200 萬人口裡只有不到 1000 人死亡。
 
-隨着規模的持續擴大，這也意味着 21 世紀將成為公民民主賦能共融的黃金時代，共同合作的多樣性，將讓我們可以一同渡過與世界生存有關的危機，賦予自由更多的選擇與意義，來形塑我們的社群。
+隨着規模的持續擴大，這也意味着 **21 世紀將成為公民民主賦能共融的黃金時代**，共同合作的多樣性，將讓我們可以一同渡過與世界生存有關的危機，賦予自由更多的選擇與意義，來形塑我們的社群。
 
 在這樣的未來，社會崩潰的反烏托邦主義或屈服於集中式超級 AI 的二元論，可能會不得不讓位於多元網路拓樸牽手的合作力量。
 
-這朵相互依存、相互交織、合作的多樣複雜性之花，這座由多元文化組成的茂盛雨林，正在向我們招手。
+**這朵相互依存、相互交織、合作的多樣複雜性之花，這座由多元文化組成的茂盛雨林，正在向我們招手。**
 
