--- a/_posts/2022-02-10-為何我是多元宇宙人.md
+++ b/_posts/2022-02-10-為何我是多元宇宙人.md
@@ -38,11 +38,11 @@ cc: site.cc-by-nc-sa
 
 以下，我將從兩個面向，來說明我所認識的多元主義，即：制度論和認識論。
 
-制度上的多元主義與一系列社會哲學形成對比，這些哲學可能被描述爲「一元論」（monist，我在一篇相關文章中調侃地稱這些爲 [ALONE：原子化自由主義與客觀主義的天真認識論](https://www.radicalxchange.org/media/blog/why-i-am-not-a-market-radical/)）。一元論哲學傾向於關注孤立的個體和 / 或這些個體所處的統一 / 普遍結構。
+制度上的多元主義與一系列社會哲學形成對比，那些哲學可能被描述爲「一元論」（monist，我在一篇相關文章中調侃地稱這些爲 [ALONE：原子化自由主義與客觀主義的天真認識論](https://www.radicalxchange.org/media/blog/why-i-am-not-a-market-radical/)）。一元論哲學傾向於關注孤立的個體和 / 或這些個體所處的統一 / 普遍結構。
 
-以孤立的個人為前提的原子主義意識形態其經常被用來為資本主義辯護，因爲它既強調群體又強調個人。然而，對於制度多元主義來說，群體並不僅僅是個人利益的載體，而是具有其存在基本意義的根本價值。同時，以單一或普遍結構爲前提的集中主義（centralistic）意識形態經常被用來替民粹主義的國家主義和民族主義辯護。
+以孤立的個人為前提的原子主義意識形態，經常被用來為資本主義辯護，因爲它既強調群體又強調個人。然而，對於制度多元主義來說，群體並不僅僅是個人利益的載體，而是具有其存在基本意義的根本價值。
 
-相反，制度多元主義否認任何一個團體 / 集體（如民族國家、普世人權等）的中心地位。
+與此同時，以單一或普遍結構爲前提的集中主義（centralistic）意識形態，經常被用來替民粹主義的國家主義和民族主義辯護。相反，制度多元主義否認任何一個團體 / 集體（如民族國家、普世人權等）的中心地位。
 
 認識論多元主義與那些尋求一致、共通性的認知傳統（最顯著的是技術官僚主義、又稱專家主義 technocracy）形成了強烈對比。它通過否認任何單一的理性邏輯或功績主義（meritocratic）方案可作為社會秩序的最優解來做到這一點。
 
