--- a/_posts/2022-02-10-為何我是多元宇宙人.md
+++ b/_posts/2022-02-10-為何我是多元宇宙人.md
@@ -146,9 +146,9 @@ cc: site.cc-by-nc-sa
 
 1. **承認原則（Recognition）**：認可（形式上或智識上）社會團體 / 思想流派，並給予它們超越成員 / 個人思想之和的認識論或機構制度的定位。
 
-2. **輔助原則（Subsidiarity）**：主要涉及某類社會群體、或其成員、或其關注的思想活動和議題，應當被委託給該群體的集體主導團或知識權威，而不是由更大型、或高層次的組織掌控或分析（analysis) 來制定規則。同時，範圍更廣的組織 / 分析在很大程度上，關注狹義的組織 / 分析之間的互動，而不是直接關注其行為 / 具體分析。
+2. **輔助原則（Subsidiarity）**：主要涉及某類社會群體、或其成員、或其關注的思想活動和議題，應當被委託給該群體的集體主導團或知識權威，而不是由更大型、或高層次的組織掌控或分析（analysis）來制定規則。同時，範圍更廣的組織 / 分析在很大程度上，關注狹義的組織 / 分析之間的互動，而不是直接關注其行為 / 具體分析。
 
-3. **中立原則（Neutrality)**：一套可被廣義族群接受的正式規則（Formalisms) 和分析實踐，應該支配著社會群體 / 分析領域（包含個人）之間的互動，因為這樣，所以人會產生粗略的共識。也就是說，他們運作的遊戲規則，實際上並不會偏向某個群體 / 領域。
+3. **中立原則（Neutrality)**：一套可被廣義族群接受的正式規則（Formalisms）和分析實踐，應該支配著社會群體 / 分析領域（包含個人）之間的互動，因為這樣，所以人會產生粗略的共識。也就是說，他們運作的遊戲規則，實際上並不會偏向某個群體 / 領域。
 
 4. **CAD 原則（Cooperation across diversity，跨越多樣性的合作）**：在一系列社會群體中（多層次）廣泛受到認可的行動和觀點，應該得到更多的信任，即使它的平均個人認可程度並沒有比較高。
 
@@ -196,7 +196,7 @@ cc: site.cc-by-nc-sa
 
 3. **博弈與激勵理論**：我的學術背景主要是建立在博弈論基礎上的機制設計。大多數機制設計是以個人的自利爲前提，以貨幣等價物爲單位。平方投票（Quadratic Voting，QV）是基於這種論述的大群體之間近似最優的集體決策程序。
 
-   在該程序中，個人使用一些貨幣（通常是平均分配的話語權，voice credits）來表達對各種提議或候選人的同意或反對。然而，收到的總支持並非個人貢獻的線性總和，還增加了「互動」成分，因此，眾人的有限貢獻，比單人的巨大貢獻更有力量。
+   在該程序中，個人使用某種貨幣（通常是平均分配的話語權，voice credits）來表達對各種提議或候選人的同意或反對。然而，收到的總支持並非個人貢獻的線性總和，還增加了「互動」成分，因此，眾人的有限貢獻，比單人的巨大貢獻更有力量。
 
    這種效應是相當顯著的：1000 個人的每人一枚代幣，等於一個人的一百萬枚代幣。這就解決了「搭便車」的問題，即個人在大型專案中的貢獻較少。
 
